--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -45,6 +45,8 @@ $font-size-mega: 72 !default;
 
 $font-size-kilo: 48 !default;
 
+$font-size-hecto: 36 !default;
+
 /* Families */
 $font-family-lato: "Lato", sans-serif !default;
 
