--- a/app/views/centre_info/_footer.html.erb
+++ b/app/views/centre_info/_footer.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/footer_promo_tiles",
   promo_tile_1: {
     image_src: "promo-tiles/promo-tile-01.jpg",
-    icon: "icon--hours icon--sphere",
+    icon: "icon--hours",
     heading: "Shopping Hours",
     desc: "Get shopping hours for your centre and department stores.",
     link_text: "View Shopping Hours",
@@ -10,7 +10,7 @@
   },
   promo_tile_2: {
     image_src: "promo-tiles/promo-tile-02.jpg",
-    icon: "icon--service icon--sphere",
+    icon: "icon--service",
     heading: "Centre Services",
     desc: "Centre Concierge, Giftcards and a list of services available.",
     link_text: "View Centre Services",
