--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -31,7 +31,7 @@
             <%# Show CTA button for concierge contact number for palm %>
             <span class="hide-fully--non-palm">
               <%= phone_link @concierge.phone_no, class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
-                <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+                <span class="icon icon--phone icon--lrger icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
                 <strong>Call Concierge Desk</strong>
               <% end %>
             </span>
