--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -36,7 +36,7 @@
       <span class="hide-fully--non-palm">
         <%= phone_link @store.phone_number, class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
           <span class="txt-truncate">
-            <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+            <span class="icon icon--phone icon--lrger icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
             Call <%= @store.name %>
           </span>
         <% end %>
