--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -39,7 +39,7 @@
 </div>
 
 <%# Faux popup close button %>
-<span class="map-micello__overlay__close icon icon--close-sml icon--xlrg icon--flush-top" aria-hidden="true"></span>
+<span class="map-micello__overlay__close icon icon--close-sml icon--lrger icon--flush-top" aria-hidden="true"></span>
 <%# //Faux popup close button %>
 
 <%# //Store map popup %>
