--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -69,7 +69,7 @@
                   <dt class="hide-visually hide-fully--palm">Store phone number</dt>
                   <dd class="hide-fully--palm">
                     <%= phone_format @store.phone_number %>
-                    <span class="icon icon--phone2 icon--xlrg icon--fixed-width" aria-hidden="true"></span>
+                    <span class="icon icon--phone2 icon--lrger icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- end %>
                 <%# //Store phone no %>
@@ -79,7 +79,7 @@
                   <dt class="hide-visually">Store email</dt>
                   <dd class="txt-truncate">
                     <%= mail_to @store.email_address, @store.email_address %>
-                    <span class="icon icon--email icon--xlrg icon--fixed-width" aria-hidden="true"></span>
+                    <span class="icon icon--email icon--lrger icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- end %>
                 <%# //Store email %>
@@ -89,7 +89,7 @@
                   <dt class="hide-visually">Westfield gift card</dt>
                   <dd>
                     Gift card accepted in store
-                    <span class="icon icon--gift-card icon--xlrg icon--fixed-width" aria-hidden="true"></span>
+                    <span class="icon icon--gift-card icon--lrger icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- end %>
                 <%# //Store gift cards accepted %>
@@ -111,12 +111,12 @@
                       </span>
                     </button>
                   <% end %>
-                  <span class="icon icon--hours icon--xlrg icon--fixed-width" aria-hidden="true"></span>
+                  <span class="icon icon--hours icon--lrger icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- else %>
                   <dd>
                     Closed today
-                    <span class="icon icon--hours icon--xlrg icon--fixed-width" aria-hidden="true"></span>
+                    <span class="icon icon--hours icon--lrger icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- end %>
                 <%# //Opening hours %>
