--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,7 +16,7 @@
   <% content_for :hero_intro do %>
     <div class="hero__intro">
       <a href="<%= centre_store_path(retailer_code: @cinema.retailer_code, id: @cinema.id) %>" class="btn btn--main">
-        <span class="icon icon--store icon--xlrg icon--spacing" aria-hidden="true"></span>
+        <span class="icon icon--store icon--lrger icon--spacing" aria-hidden="true"></span>
         Cinema Details
       </a>
     </div>
