--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -107,7 +107,7 @@
             <span class="hide-fully--non-palm">
               <%= phone_link store_phone_number(@centre_stores, @product.retail_chain), class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
                 <span class="txt-truncate">
-                  <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+                  <span class="icon icon--phone icon--lrger icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
                   Call <%= @product.retail_chain_name %>
                 </span>
               <% end %>
