--- a/app/views/shared/social_share/_social_share_inner.html.erb
+++ b/app/views/shared/social_share/_social_share_inner.html.erb
@@ -4,7 +4,7 @@
   <%# Facebook %>
   <li class="social-share__facebook">
     <a href="http://www.facebook.com/sharer/sharer.php?u=<%=URI::encode url %>&t=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank">
-      <span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="icon icon--facebook icon--lrger icon--flush-top" aria-hidden="true"></span>
       <span class="hide-visually">Facebook</span>
     </a>
   </li>
@@ -13,7 +13,7 @@
   <%# Twitter %>
   <li class="social-share__twitter">
     <a href="http://twitter.com/intent/tweet?url=<%=URI::encode url %>&text=<%= URI::encode twitter_title || title %> via @WestfieldAU" rel="external" target="_blank">
-      <span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="icon icon--twitter icon--lrger icon--flush-top" aria-hidden="true"></span>
       <span class="hide-visually">Twitter</span>
     </a>
   </li>
@@ -22,7 +22,7 @@
   <%# Google+ %>
   <li class="social-share__google">
     <a href="https://plus.google.com/share?url=<%=URI::encode url %>" rel="external" target="_blank">
-      <span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="icon icon--google-plus icon--lrger icon--flush-top" aria-hidden="true"></span>
       <span class="hide-visually">Google+</span>
     </a>
   </li>
@@ -32,7 +32,7 @@
     <%# Pinterest %>
     <li class="social-share__pinterest">
       <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank">
-        <span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span>
+        <span class="icon icon--pinterest icon--lrger icon--flush-top" aria-hidden="true"></span>
         <span class="hide-visually">Pinterest</span>
       </a>
     </li>
@@ -42,7 +42,7 @@
   <%# Email %>
   <li class="social-share__email">
     <a href="mailto:?<%=URI::encode "subject=Look what I found at Westfield&body=I would like to share this #{email_body || ''} from Westfield with you. What do you think?\n\n#{title}" %> <%=URI::encode "at #{@centre.name}" if @centre.present? %><%=URI::encode "\n\n#{url}" %>">
-      <span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span>
+      <span class="icon icon--email icon--lrger icon--flush-top" aria-hidden="true"></span>
       <span class="hide-visually">Email</span>
     </a>
   </li>
