--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -142,7 +142,7 @@
               <label for="gift-card-store-filter" class="btn btn--main btn--main-white btn--main-toggle btn--main-toggle-ios <%= 'is-disabled' if !@stores.any_accepting_gift_cards? %> <%= 'is-active' if filtering_gift_cards? %>">
                 <input ng-init="gift_cards = <%= filtering_gift_cards? ? true : false %>" ng-model="gift_cards" ng-change="giftCardChange()" id="gift-card-store-filter" type="checkbox" name="gift_cards" value="true" class="btn--main-toggle__input hide-visually" <%= 'checked' if filtering_gift_cards? %><%= 'disabled' unless @stores.any_accepting_gift_cards? %>>
                 <span class="btn--main-toggle__lbl">
-                  <span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span>
+                  <span aria-hidden="true" class="icon icon--gift-card icon--lrger icon--flush-top-mozilla"></span>
                   Gift Card
                   <span class="hide-visually--palm"> accepted</span>
                 </span>
