--- a/app/views/centre_info/_contact_us.html.erb
+++ b/app/views/centre_info/_contact_us.html.erb
@@ -12,7 +12,7 @@
 
           <%# Show centre number if at non-palm size %>
           <div class="box island txt-center hide-fully--palm">
-            <span class="icon icon--phone2 icon--lrger icon--spacing-lrg" aria-hidden="true"></span>
+            <span class="icon icon--phone2 icon--xlrg icon--spacing-lrg" aria-hidden="true"></span>
             <span class="hide-visually">Phone number</span>
             <span itemprop="telephone"><%= @centre.phone_number %></span>
           </div>
@@ -35,7 +35,7 @@
       <% if @centre.email_address.present? %>
         <div class="grid__item non-palm-one-half">
           <div class="box island txt-center txt-truncate">
-            <span class="icon icon--email icon--lrger icon--spacing-lrg" aria-hidden="true"></span>
+            <span class="icon icon--email icon--xlrg icon--spacing-lrg" aria-hidden="true"></span>
             <span class="hide-visually">Email</span>
             <%= mail_to @centre.email_address, @centre.email_address, itemprop: "email" %>
           </div>
