--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -152,7 +152,7 @@
 				<%# Search toggle btn %>
 				<button type="button" class="btn" toggle-visibility="site-search" aria-owns="site-search">
 					<span class="hide-visually">Show site search</span>
-					<span class="icon icon--search icon--spacing icon--flush-top icon--lrger" aria-hidden="true"></span>
+					<span class="icon icon--search icon--spacing icon--flush-top icon--xlrg" aria-hidden="true"></span>
 				</button>
 				<%# //Search toggle btn %>
 
