--- a/app/assets/stylesheets/partials/modules/_promo-tile.scss
+++ b/app/assets/stylesheets/partials/modules/_promo-tile.scss
@@ -27,7 +27,7 @@
   }
 
   /* The main icon of the tile that sits above the text */
-  .promo-tile__icon:before {
+  .promo-tile__icon {
     @include to-rem(margin-top, -20);
 
     @include respond-min($non-palm) {
