--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -13,9 +13,9 @@
         <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
           <a href="<%= @centre.facebook %>" class="flag flag--spacing-half flag--shrink-wrap social-follow" rel="external" target="_blank">
             <div class="flag__img">
-              <div class="box islet island-non-palm box--sphere">
-                <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm" aria-hidden="true"></span>
-              </div>
+              <!-- <div class="box islet island-non-palm box--sphere"> -->
+                <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top icon--xlrg icon--hecto-non-palm icon--sphere" aria-hidden="true"></span>
+              <!-- </div> -->
             </div>
             <div class="flag__body">Facebook</div>
           </a>
