Create new price strip module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,6 +140,7 @@
 @import "partials/modules/fallback-msg";
 @import "partials/modules/img-rotate";
 @import "partials/modules/product-curation";
+@import "partials/modules/price-strip";
 //@import "partials/modules/sprite";
 
   /* Modules -> Widgets */
