WSF-6449 Removed pop-up dialog on products page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,7 +146,7 @@
   @import "partials/modules/widgets/flexslider";
   @import "partials/modules/widgets/map-micello";
   @import "partials/modules/widgets/tabs";
-  @import "partials/modules/widgets/dialog";
+  //@import "partials/modules/widgets/dialog";
   //@import "partials/modules/widgets/accordion";
   //@import "partials/modules/widgets/adaptive-google-map";
   //@import "partials/modules/widgets/social-media-share";
