Adding missing modifiers to box abstraction

--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -5,6 +5,12 @@
 /*
   Simple cosmetics for a container.
 
+  .box--heavy         - Heavier drop shadow
+  .box--drop-down     - Drop down style drop shadow
+  .box--torn          - Torn paper treatment
+  .box--mrg-base      - Base bottom spacing
+  .box--mrg-half      - Half bottom spacing
+
   Styleguide Box
 */
 
