--- a/app/views/styleguide/abstractions/_box.html.erb
+++ b/app/views/styleguide/abstractions/_box.html.erb
@@ -1,5 +1,5 @@
 <%= styleguide_block 'Box' do |style| %>
-<div class="box">
+<div class="box $modifier_class">
   <p>This is a box!</p>
 </div>
 <% end %>
