Adding new base misc style

--- a/app/assets/stylesheets/partials/base/_misc.scss
+++ b/app/assets/stylesheets/partials/base/_misc.scss
@@ -47,3 +47,7 @@ canvas {-ms-touch-action: double-tap-zoom;}
 /* [CODE]
 -------------------------------------------------------*/
 code {color: $color-blue;}
+
+/* [STRIKETHOUGH]
+-------------------------------------------------------*/
+s {text-decoration: line-through;}
