Style Guide updates

--- a/app/views/styleguide/modules.html.erb
+++ b/app/views/styleguide/modules.html.erb
@@ -32,4 +32,6 @@
 
 <%= render 'styleguide/modules/timeline' %>
 
+<%= render 'styleguide/modules/price_strip' %>
+
 <%= render 'styleguide/modules/txt_formatted' %>
