--- a/app/views/styleguide/modules/_tile.html.erb
+++ b/app/views/styleguide/modules/_tile.html.erb
@@ -7,9 +7,7 @@
     </div>
 
     <div class="tile__meta">
-      <span class="tile__meta__icon">
-        <span class="icon icon--products" aria-hidden="true"></span>
-      </span>
+      <span class="tile__meta__icon icon icon--products" aria-hidden="true"></span>
       <div class="tile__meta__inner">
         <h3 class="tile__meta__hdr txt-truncate">Goodridden</h3>
         <p class="tile__meta__desc txt-truncate">
